version 0.9.0 - currently working on
- [#3025] Feature: Added VCF download to the detail view
- [#3023] Fix: Detail view shows dummy image even for person with image
- [#3033] Fix: Team leaders get invalid CSS classes
- [#2989] Fixed some dependency issues to oelib (increased version requirement)

version 0.8.0 - released 2009-05-16 at T3DD09
If you upgrade an existing installation, read the upgrade notes in the documentation!!!
- [#2972] Fix: CSS file is now correctly loaded via TypoScript
- [#2547] Feature: Provide an update script
- [#2718] Feature: Required fields now can be configured in extension config
- [#2809] Fix: When 'ignore group selection' in grouped team view is enabled now all groups are selected
- [#211] Change: Dates prior to 1970 can now be saved properly (depends on TYPO3 4.2 now!)
- [#2801] Fix: Email address in the list view is not secured against spam
- [#2382] Fix: PHP error when loading oelib template helper due to camel-case filename
- [#2802] Change: Added a comma in list template between surname and first name (looks better)
- [#2523] Change: Make use of the oelib AutoLoader consistent
- [#2719] Feature: Additional fields for nickname and mobile phone number
- [#2780] Change: In grouped list view title is linked to detail view too
- [#2567] Fix: SQL errors in the box view when having no persons selected
- [#2476] Change: Updated the documentation to the new template
- [#2761] Fix: Person's title is not shown correctly in the list view
- [#2762] Change: Extension is now usable as global extension
- [#2756] Change: Allow location records on regular pages
- [#2640] Fix: Hidden subparts caused some missing fields in the list view.
- [#2511] Cleanup: Cleaned up the copy/pasted stuff from oelib/seminars
- [#2513] Updated copyright lines to new mail address
- [#2510] Updated copyright lines to 2009
- [#1843, #2544] Refactoring: Added new detailView class
- [#2509] Change: Changed extension key to "bzdstaffdirectory"