@@ -1,5 +1,6 @@
 version 0.9.0 - currently working on
-- [#3025] Feature: Added VCF download to the detail view
+- [#3029] Feature: Added functions as database relations to persons (instead of text field)
+- [#3025] Feature: Added vCard download to the detail view
 - [#3023] Fix: Detail view shows dummy image even for person with image
 - [#3033] Fix: Team leaders get invalid CSS classes
 - [#2989] Fixed some dependency issues to oelib (increased version requirement)
